--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+# Core Dependencies for Dual-Modal Neuroimaging Framework
 torch>=1.9.0
 torchvision>=0.10.0
-transformers>=4.20.0
 numpy>=1.21.0
+scipy>=1.7.0
+matplotlib>=3.4.0
 scikit-learn>=1.0.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-pillow>=8.3.0
-tqdm>=4.62.0
-tensorboard>=2.7.0 
+
+# Optional: Advanced Analysis
+seaborn>=0.11.0  # Enhanced plotting
+plotly>=5.0.0   # Interactive visualizations
+
+# Development & Testing
+pytest>=6.0.0 
